--- a/P1.ipynb
+++ b/P1.ipynb
@@ -28,7 +28,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3]\n",
+    "print (type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +58,7 @@
     }
    ],
    "source": [
-    "print(\"hello world\")"
+    "print(\"hello world\")\n"
    ]
   }
  ]
