update in testing

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -46,19 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "hello world\n"
+      "hello world\ntesting\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello world\")\n"
+    "print(\"hello world\")\n",
+    "print(\"testing\")"
    ]
   }
  ]
